Fix exposed filter alignment

--- a/css/wwm_adminimal.css
+++ b/css/wwm_adminimal.css
@@ -840,6 +840,11 @@
   border-radius: 20px;
 }
 
+.adminimal .views-exposed-form .form--inline > .form-item {
+  float: none;
+  display: inline-block;
+}
+
 [dir="rtl"] .adminimal .is-horizontal .tabs__tab + .tabs__tab {
   border-radius: 0;
   border: none;
